--- a/content/stylesheet.css
+++ b/content/stylesheet.css
@@ -74,3 +74,16 @@ pre, blockquote {
 q {
   font-style: italic;
 }
+
+table {
+  border-collapse: collapse;
+}
+
+table th {
+  border-bottom: 0.2rem solid #212426;
+  padding: 1rem 2rem 1rem 2rem;
+}
+
+table td {
+  padding: 1rem;
+}
