--- a/content/stylesheet.css
+++ b/content/stylesheet.css
@@ -23,7 +23,7 @@ body {
   margin: 0 auto;
   max-width: 70rem;
   width: 95%;
-  padding: 2rem;
+  padding: 1rem;
 }
 
 a {
@@ -38,10 +38,16 @@ a:hover {
 }
 
 h1 {
-  font-size: 5rem;
+  font-size: 4rem;
   font-weight: 800;
   letter-spacing: -.025em;
   line-height: 1.5;
+}
+
+h2 {
+  font-size: 2.5rem;
+  font-weight: 800;
+  letter-spacing: -.025em;
 }
 
 ol,
