--- a/layouts/default.html
+++ b/layouts/default.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="/stylesheet.css">
     <meta name="description" content="<%= @item[:description] %>">
 
+    <script data-goatcounter="https://gc.httpguides.com/count" async src="//gc.httpguides.com/count.js"></script>
     <script type="application/ld+json">
      {
        "@context": "https://schema.org/",
