--- a/content/sitemap.erb
+++ b/content/sitemap.erb
@@ -1,1 +1,1 @@
-<%= xml_sitemap(items: items.select { |i| i.path.end_with?('.html') }) %>
+<%= xml_sitemap(items: items.select { |i| i.path.end_with?('.html') || i.path.end_with?('/') }) %>
