--- a/content/stylesheet.css
+++ b/content/stylesheet.css
@@ -26,14 +26,13 @@ body {
 }
 
 a {
-  color: #6878a3;
-  text-decoration: underline;
+  color: #ad3446;
 }
 
 a:active,
 a:focus,
 a:hover {
-  color: #98a3c1;
+  color: #7e2633;
 }
 
 h1 {
