--- a/layouts/guides.html
+++ b/layouts/guides.html
@@ -5,9 +5,89 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title><%= @item[:title] %> - HTTP Guides</title>
     <link rel="stylesheet" href="/stylesheet.css">
+    <style>
+      pre {
+        background-color: #cbdfbd;
+      }
+
+      blockquote {
+        background-color: #a9d2ef;
+        margin: 0;
+      }
+
+      pre, blockquote {
+        border-radius: 0.5rem;
+        box-shadow: 0 0 #0000, 0 0 #0000, 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
+        padding: 1.5rem;
+        overflow: auto;
+      }
+
+      q {
+        font-style: italic;
+      }
+
+      table {
+        border-collapse: collapse;
+      }
+
+      table th {
+        border-bottom: 0.2rem solid #212426;
+        padding: 1rem 2rem 1rem 2rem;
+      }
+
+      table td {
+        padding: 1rem;
+      }
+
+      main {
+        display: flex;
+      }
+
+      main article {
+        flex-grow: 1;
+      }
+
+      nav {
+        flex: 0 0 33rem;
+        margin-top: 4rem;
+        position: sticky;
+        overflow: auto;
+        top: 0;
+        height: 100vh;
+      }
+
+      nav ul {
+        list-style: none;
+      }
+
+      nav li {
+        padding-bottom: 0.5rem;
+      }
+
+      nav a {
+        color: #212426;
+        text-decoration: none;
+      }
+
+      footer {
+        border-top: 2px solid #212426;
+        margin-top: 2rem;
+        padding: 1rem;
+        text-align: center;
+      }
+
+      @media (max-width: 768px) {
+        main article {
+          width: 100%;
+        }
+
+        nav {
+          display: none;
+        }
+      }
+    </style>
     <meta name="description" content="<%= @item[:description] %>">
     <link rel="canonical" href="https://httpguides.com<%= create_canonical_path(@item[:filename]) %>">
-
     <script data-goatcounter="https://gc.httpguides.com/count" async src="//gc.httpguides.com/count.js"></script>
     <script type="application/ld+json">
      {
@@ -22,7 +102,7 @@
      </script>
   </head>
   <body>
-    <main class="main">
+    <main>
       <nav>
         <ul>
           <li><a href="/status/100-continue.html">100 Continue</a></li>
