--- a/content/stylesheet.css
+++ b/content/stylesheet.css
@@ -5,7 +5,7 @@
 }
 
 ::selection {
-  background-color: #cbc1a8;
+  background-color: #baad8c;
 }
 
 html {
@@ -14,7 +14,7 @@ html {
 }
 
 body {
-  background-color: #fdf5e6;
+  background-color: #fae8c7;
   color: #212426;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, system-ui, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji';
   font-size: 1.8rem;
