--- a/layouts/guides.html
+++ b/layouts/guides.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="/stylesheet.css">
     <style>
       pre {
-        background-color: #cbdfbd;
+        background-color: #E0E9D8;
       }
 
       blockquote {
